--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -114,7 +114,9 @@
               </div>
               <div class="ttl-tertiary">セゾンプラチナ・ビジネス プロ アメリカン・エキスプレス®・カード</div>
               <div class="card-img">
-                <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                <a href="/platinum_business_pro/">
+                  <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                </a>
               </div>
             </div>
 
@@ -124,7 +126,9 @@
               </div>
               <div class="ttl-tertiary">セゾンゴールド・<br> ビジネス プロ・カード</div>
               <div class="card-img">
-                <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
+                <a href="/gold_business_pro/">
+                  <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
+                </a>
               </div>
             </div>
 
@@ -134,7 +138,9 @@
               </div>
               <div class="ttl-tertiary">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード</div>
               <div class="card-img">
-                <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="credit-card-img">
+                <a href="/purchasing_card/">
+                  <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="credit-card-img">
+                </a>
               </div>
             </div>
 
@@ -273,19 +279,19 @@
 
             <div class="card-row">
               <div class="card-btn card-type-1">
-                <a href="#" class="">詳細</a>
+                <a href="/platinum_business_pro/" class="">詳細</a>
               </div>
             </div>
 
             <div class="card-row">
               <div class="card-btn card-type-1">
-                <a href="#" class="">詳細</a>
+                <a href="/gold_business_pro/" class="">詳細</a>
               </div>
             </div>
 
             <div class="card-row">
               <div class="card-btn card-type-1">
-                <a href="#" class="">詳細</a>
+                <a href="/platinum_business_pro/" class="">詳細</a>
               </div>
             </div>
           </div>
@@ -307,7 +313,9 @@
               </div>
               <div class="ttl-tertiary">セゾンプラチナ・ビジネス・ アメリカン・エキスプレス®・カード</div>
               <div class="card-img">
-                <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                <a href="/platinum_business/">
+                  <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                </a>
               </div>
             </div>
 
@@ -317,7 +325,9 @@
               </div>
               <div class="ttl-tertiary">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</div>
               <div class="card-img">
-                <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img">
+                <a href="/cobalt_business/">
+                  <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img">
+                </a>
               </div>
             </div>
           </div>
@@ -417,13 +427,13 @@
 
             <div class="card-row">
               <div class="card-btn card-type-2">
-                <a href="#" class="">詳細</a>
+                <a href="/platinum_business/" class="">詳細</a>
               </div>
             </div>
 
             <div class="card-row">
               <div class="card-btn card-type-2">
-                <a href="#" class="">詳細</a>
+                <a href="/cobalt_business/" class="">詳細</a>
               </div>
             </div>
           </div>
