--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -168,7 +168,9 @@
                   <div class="container">
                     <div class="flex gap20 card__box-wrapper">
                       <div class="credit-card02">
-                        <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img"/>
+                        <a href="/platinum_business/">
+                          <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img"/>
+                        </a>
                       </div>
                       <div class="card__box-title">
                         <h3 class="ttl-terianry" style="font-size:16px;">
@@ -189,7 +191,7 @@
                       </div>
                     </div>
                   </div>
-                  <a href="#" class="bondi_blue_outline_btn">{{ common.button.detail }}</a >
+                  <a href="/platinum_business/" class="bondi_blue_outline_btn">{{ common.button.detail }}</a >
                 </li>
                 <li class="card-type8">
                   <h3 class="card__box--ttl">
@@ -198,7 +200,9 @@
                   <div class="container">
                     <div class="flex gap20 card__box-wrapper">
                       <div class="credit-card02">
-                        <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img"/>
+                        <a href="/cobalt_business/">
+                          <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img"/>
+                        </a>
                       </div>
                       <div class="card__box-title">
                         <h3 class="ttl-terianry" style="font-size:16px;">
@@ -213,7 +217,7 @@
                       </div>
                     </div>
                   </div>
-                  <a href="#" class="bondi_blue_outline_btn small">{{ common.button.detail }}</a >
+                  <a href="/cobalt_business/" class="bondi_blue_outline_btn small">{{ common.button.detail }}</a >
                 </li>
               </ul>
             </div>
@@ -239,7 +243,7 @@
                 <img id="zoomImg" class="zoomImg" src="/assets/img/common/cash-flow.png" alt="Your Image" class="credit-card-img"/>
               </div>
             </div>
-            <a href="#" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a >
+            <a href="/payment_com/" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a >
           </div>
         </div>
         <div id="challenge-raise-funds" class="notification-tertiary">
@@ -319,7 +323,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" class="bondi_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a >
+            <a href="/business_support_loan/" class="bondi_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a >
           </div>
         </div>
       </div>
@@ -330,7 +334,7 @@
       <h3 class="ttl-tertiary">
         興味のあるサービス資料をまとめてダウンロードできます。
       </h3>
-      <a href="#" class="blue_gradient_btn">{{ common.button.download }}</a>
+      <a href="/catalog_list/" class="blue_gradient_btn">{{ common.button.download }}</a>
     </section>
     <section class="section-quaternary">
       <h5 class="ttl-sub">VOICE</h5>
