add background sp

--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -47,6 +47,7 @@ $blue-color-1: #00758c;
 $blue-color-2: #e5f4f8;
 $blue-color-3: #004098;
 $blue-color-4: #014a58;
+$blue-color-5: #0f218b;
 
 $green-color: #007477;
 $green-color-1: #53d2b2;
@@ -69,7 +70,6 @@ $yellow-color: #ffff01;
 $yellow-color-1: #edf8e5;
 
 $orange-color: #f0ab00;
-
 
 // テキストカラー
 
