--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1495,6 +1495,7 @@
 
   .card {
     width: 100%;
+    height: 100%;
     background-color: #ffffff;
     box-shadow: none;
     padding: 30px 30px 34px 30px;
