--- a/app/assets/scss/4-pages/_personal.scss
+++ b/app/assets/scss/4-pages/_personal.scss
@@ -124,6 +124,14 @@
       background-color: #fff;
       box-shadow: 0px 3px 20px #00000029;
 
+      .notification-panel1 {
+        .item__img {
+          img {
+            border-radius: 4px;
+          }
+        }
+      }
+
       .notification-panel2 {
         .card-list {
           padding: 0 30px;
@@ -144,7 +152,7 @@
         margin-bottom: 60px;
         .cash-flow-img {
           img {
-            transition: all .3s;
+            transition: all 0.3s;
             &:hover {
               transform: scale(1.04);
             }
