change text improve cash flow

--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -198,7 +198,7 @@
                         </h3>
                       </div>
                       <div class="box-item">
-                        <dd>金利</dd>
+                        <dd>ご融資利率（実質年率）</dd>
                         <h3 class="ttl-tertiary"><span class="text-yellow">2.8％～9.6%</span>
                           <small>※2</small>
                         </h3>
@@ -208,7 +208,7 @@
 
                   <dd class="description">
                     ※1 初回はご融資枠全額をご融資いたします。ご融資枠の上限は、年収の1/3以内となります。<br>
-                    ※2 ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプ ラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバ ルト・ビジネス・アメリカン・エキスプレス®・カードの場合18.0％です。 <br>
+                    ※2 ご利用可能枠が110万円以上の方が対象。本サービスご利用前のご融資利率（実質年率）はセゾンプ ラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバ ルト・ビジネス・アメリカン・エキスプレス®・カードの場合18.0％です。 <br>
                     ※ 審査の結果、110万円未満のご利用可能枠となる場合は、書面にてご連絡いたします。
                   </dd>
                 </li>
@@ -227,12 +227,12 @@
         <div class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
-              <span>MONEY CARD</span>
+              <span>セゾンのカードローン MONEY CARD</span>
             </h3>
 
             <div class="card-type13">
               <dd>
-                MONEY CARDとは、キャッシングリボ専用のローンカードです。全国の郵便局をはじめ、都市銀行、地方銀行、信用金庫、コンビニなどに設置のATMで、ご利用可能枠の範囲内で繰り返しご利用いただけます。<strong>資金使途は事業性用途としてもご利用可能。余裕のある融資枠をご用意しています。</strong>
+                MONEY CARDは、キャッシングリボ専用のカードローンで、ご利用可能枠の範囲内で繰り返しご利用いただけます。<strong>ご利用用途は事業性資金としてもご利用可能。ゆとりある融資枠をご用意しています。</strong>
               </dd>
 
               <div class="flex gap60 aiC sp-reverse">
@@ -246,14 +246,14 @@
                     <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">1</div>
                       <h5 class="ttl-senary">
-                        <span class="yellow-bottom">全国のコンビニ・ATM</span><span style="font-size: 16px">でご利用可能（ATM手数料は何度でも無料）</span>
+                        <span class="yellow-bottom">全国のコンビニATM</span><span style="font-size: 16px">でご利用可能（ATM手数料は何度でも無料）</span>
                       </h5>
                     </dt>
                   </dl>
                   <dl class="flex aic gap30 sec01-right-box">
                     <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">2</div>
-                      <h5 class="ttl-senary">ご指定の口座に
+                      <h5 class="ttl-senary">お客様口座に
                         <span class="yellow-bottom">最短数十秒で振り込み</span>
                       </h5>
                     </dt>
@@ -270,7 +270,8 @@
                     <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">4</div>
                       <h5 class="ttl-senary">新規のご契約&ご利用で、
-                        <span class="yellow-bottom">最大2ヵ月分のご利息をキャッシュバック</span>
+                        <span class="yellow-bottom">最大2ヵ月分のお利息をキャッシュバック</span>
+                        <span style="font-size: 16px">（ご入会月の翌月末までのお借入分が対象となります。）</span>
                       </h5>
                     </dt>
                   </dl>
