--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -109,7 +109,7 @@
           </div>
         </a>
 
-        <a class="card-support-detail">
+        <a href="/cobalt_business/" class="card-support-detail">
           <div class="card-support-detail__img">
             <img src="/assets/img/credit_cards/american-express-02.png"/>
           </div>
