--- a/app/pages/cobalt_business/index.njk
+++ b/app/pages/cobalt_business/index.njk
@@ -160,7 +160,7 @@ link: "#application-flow"
     <div class="containers">
 
       <h2 class="ttl-primary">登記簿や決算書の提出は不要です！</h2>
-      <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出が不要です。<br>
+      <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出は不要です。<br>
         <strong>書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。</strong>
       </h4>
       <div>
