--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -97,7 +97,7 @@ link: "#application-flow"
         <div class="card">
           <div class="card-head">SAISON MILE CLUB</div>
           <div class="card-content">
-            <div>JALのマイル還元率 : <span class="percent blue-text"> 1.125％</span></div>
+            <div>JALのマイル還元率 : <span class="percent blue-text"> 最大1.125％</span></div>
           </div>
         </div>
         <div class="card">
@@ -141,7 +141,7 @@ link: "#application-flow"
     <div class="containers">
 
       <h2 class="ttl-primary">登記簿や決算書の提出は不要です！</h2>
-      <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出が不要です。<br> 書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。
+      <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出は不要です。<br> 書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。
       </h4>
       <div>
         <a href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14A6&sd=80F" target="_blank" class="blue_gradient_btn">お申し込みはこちら</a>
@@ -343,10 +343,9 @@ link: "#application-flow"
           <div class="">
             <div class="content-col height-160">
               <ul>
-                <li>プラチナカード</li>
-                <li>キャッシュバック率 1％※1</li>
-                <li>支払いサイト 最長84日間※1</li>
-                <li>海外最高1億円、国内最高5,000万円の<br />旅行傷害保険</li>
+                <li>プラチナ会員様限定の優待・特典・サービスが充実</li>
+                <li>会員様専用コンシェルジュ・サービス</li>
+                <li>登記簿がなくても個人与信で審査ができる</li>
               </ul>
             </div>
           </div>
@@ -444,7 +443,7 @@ link: "#application-flow"
                 <li>プラチナ会員専用デスク</li>
                 <li>AMEXセンチュリオンデザイン採用</li>
                 <li>支払いサイト 最長84日間※1</li>
-                <li>通常429米ドルのプライオリティパスを代表者の方は無料で ご登録可能</li>
+                <li>通常469米ドルのプライオリティ・パスを代表者の方は無料で ご登録可能</li>
               </ul>
             </div>
           </div>
