--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -180,7 +180,7 @@ link:"#"
               すべての支払いを、最長60日後にカードで先延ばし!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
               <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
@@ -214,7 +214,7 @@ link:"#"
               まとまった資金を低金利で!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
               <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
             </div>
           </div>
