--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -31,7 +31,7 @@ link: "#"
         <div class="sub-title"> 経費精算・請求・出張手配まで。</div>
       </h3>
       <h1 class="ttl-primary">業務効率化をサポートするサービス</h1>
-      <h4 class="ttl-quaternary">クレディセゾンは中小企業様・個人事業主様向けに、<br>
+      <h4 class="ttl-quaternary">クレディセゾンは中小企業・個人事業主向けに、<br>
         今すぐ始められて効果を実感できる業務効率化サービスを提供いたします。
       </h4>
     </div>
