--- a/app/pages/platinum_business_pro/index.njk
+++ b/app/pages/platinum_business_pro/index.njk
@@ -92,7 +92,7 @@ link: "#application-flow"
           </div>
 
           <div class="banner-btn">
-            <a class="banner-btn__option blue_gradient_btn" href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=1&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number=" target="_blank">お問い合わせはこちら</a>
+            <a class="banner-btn__option blue_gradient_btn" href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=1&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number=" target="_blank">お申込みはこちら</a>
             <a class="banner-btn__option bondi_blue_outline_btn" href="/contact/">お問い合わせはこちら</a>
           </div>
 
@@ -165,7 +165,7 @@ link: "#application-flow"
     <div class="containers">
 
       <h2 class="ttl-primary">登記簿や決算書の提出は不要です！</h2>
-      <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出が不要です。<br>
+      <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出は不要です。<br>
         <strong>書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。</strong>
       </h4>
       <div>
