--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -42,6 +42,10 @@
             .yellow-txt {
               color: $yellow-color;
             }
+
+            @media #{$sp} {
+              font-size: 16px;
+            }            
           }
         }
         .ttl-primary {
