add link button

--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -227,7 +227,7 @@
       <h5 class="ttl-sub">{{ smaller_companies.tertiary.sub_title }}</h5>
       <h2 class="ttl-secondary">{{ smaller_companies.tertiary.title }}</h2>
       <h3 class="ttl-tertiary">{{ smaller_companies.tertiary.description }}</h3>
-      <a href="#" class="blue_gradient_btn">{{ common.button.download }}</a>
+      <a href="/catalog_list/" class="blue_gradient_btn">{{ common.button.download }}</a>
     </section>
 
     <section class="section-quaternary">
