--- a/app/pages/purchasing_card/index.njk
+++ b/app/pages/purchasing_card/index.njk
@@ -73,7 +73,7 @@ link: "#application-flow"
               <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="credit-card-img">
             </div>
             <div class="card-description">
-              <span>選べる機能で中小企業様の経営をサポート</span>
+              <span>選べる機能で中小企業の経営をサポート</span>
               <div class="card-description__options">
                 <div class="option">
                   <span>0.5％<br />
