--- a/app/pages/cobalt_business/index.njk
+++ b/app/pages/cobalt_business/index.njk
@@ -338,10 +338,9 @@ link: "#application-flow"
           <div class="first-column">
             <div class="content-col aiS">
               <ul>
-                <li>プラチナカード</li>
-                <li>キャッシュバック率 1％※1</li>
-                <li>支払いサイト 最長84日間※1</li>
-                <li>海外最高1億円、国内最高5,000万円の<br />旅行傷害保険</li>
+                <li>プラチナ会員様限定の優待・特典・サービスが充実</li>
+                <li>会員様専用コンシェルジュ・サービス</li>
+                <li>登記簿がなくても個人与信で審査ができる</li>
               </ul>
             </div>
           </div>
@@ -440,7 +439,7 @@ link: "#application-flow"
               <ul>
                 <li>プラチナ会員専用デスク</li>
                 <li>AMEXセンチュリオンデザイン採用</li>
-                <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
+                <li>通常469米ドルのプライオリティ・パスを代表者様は無料でご登録可能</li>
               </ul>
 
               <a href="/platinum_business/" class="bondi_blue_outline_btn aiS">
