--- a/app/pages/concur_expense/index.njk
+++ b/app/pages/concur_expense/index.njk
@@ -111,6 +111,7 @@ link: "#material"
               <span class="special">二重申請も自動的にチェック</span>
             </li>
           </ul>
+          <small class="sub-note">※画面はイメージです</small>
         </div>
       </div>
 
