--- a/app/pages/contact/form_test.njk
+++ b/app/pages/contact/form_test.njk
@@ -540,7 +540,8 @@
             }
 
             .form-primary .mktoButtonWrap.mktoSkip .mktoButton {
-              width: 460px;
+              width: 100%;
+              max-width: 460px;
               text-align: center;
               display: block;
               font-weight: 400;
@@ -565,7 +566,7 @@
                 </label>
                 <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div><select id="infoContractStatus"
                   name="infoContractStatus" aria-labelledby="LblinfoContractStatus InstructinfoContractStatus"
-                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="width: 350px;">
+                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="max-width: 350px; width: 100%;">
                   <option value="">選択...</option>
                   <option value="すでに当社とのご契約があるお客様">すでに当社とのご契約があるお客様</option>
                   <option value="当社とのご契約がないお客様">当社とのご契約がないお客様</option>
@@ -587,7 +588,7 @@
                 </label>
                 <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div><select id="infoServiceName"
                   name="infoServiceName" aria-labelledby="LblinfoServiceName InstructinfoServiceName"
-                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="width: 350px;">
+                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="max-width: 350px; width: 100%;">
                   <option value="" style="color: #aaa;">選択...</option>
                   <option value="コーポレートカードに関するお問い合わせ">コーポレートカードに関するお問い合わせ</option>
                   <option value="パーチェシングカードに関するお問い合わせ">パーチェシングカードに関するお問い合わせ</option>
@@ -635,7 +636,7 @@
                 <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div><input id="infoCompanyWebsite"
                   name="infoCompanyWebsite" placeholder="https://business.creditsaison.jp/" maxlength="255"
                   aria-labelledby="LblinfoCompanyWebsite InstructinfoCompanyWebsite" type="url"
-                  class="mktoField mktoUrlField mktoHasWidth" style="width: 350px;"><span
+                  class="mktoField mktoUrlField mktoHasWidth" style="max-width: 350px; width: 100%;"><span
                   id="InstructinfoCompanyWebsite" tabindex="-1" class="mktoInstruction"></span>
                 <div class="mktoClear"></div>
               </div>
@@ -719,7 +720,7 @@
                 </label>
                 <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div><select id="formDepartment"
                   name="formDepartment" aria-labelledby="LblformDepartment InstructformDepartment"
-                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="width: 350px;">
+                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="max-width: 350px; width: 100%;">
                   <option value="">選択...</option>
                   <option value="経営">経営</option>
                   <option value="財務・経理">財務・経理</option>
@@ -747,7 +748,7 @@
                 </label>
                 <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div><select id="formPosition"
                   name="formPosition" aria-labelledby="LblformPosition InstructformPosition"
-                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="width: 350px;">
+                  class="mktoField mktoHasWidth mktoRequired" aria-required="true" style="max-width: 350px; width: 100%;">
                   <option value="">選択...</option>
                   <option value="経営者">経営者</option>
                   <option value="役員">役員</option>
@@ -921,7 +922,7 @@
             <div class="mktoFormCol" style="margin-bottom: 10px;">
               <div class="mktoOffset mktoHasWidth" style="width: 10px;"></div>
               <div class="mktoFieldWrap">
-                <div class="mktoHtmlText mktoHasWidth" style="width: 602px;"><span style="text-decoration: underline;">
+                <div class="mktoHtmlText mktoHasWidth" style="width: 100%;"><span style="text-decoration: underline;">
                     <a href="https://reg18.smp.ne.jp/regist/is?SMPFORM=mamf-oikhk-5e11516dd3e831384239085b5ac4cf66"
                       target="_blank">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</a></span><br><br></div>
                 <div class="mktoClear"></div>
