--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -109,7 +109,7 @@
         <div class="containers">
           <ul class="inherit card-list">
             <li class="card-type6">
-              <a href="#" class="card">
+              <a class="card close disabled">
                 <div class="ttl-quaternary-container">
                   <div class="act-more-tooltip">
                     <h4 class="act-more-tooltip__content">{{"一番喜ばれています！" | safe}}</h4>
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="card-type6">
-              <a href="#" class="card">
+              <a class="card close disabled">
                 <div class="ttl-quaternary-container">
                   <h5 class="ttl-quinary">請求/回収業務の</h5>
                   <h4 class="ttl-quaternary">すべてを代⾏</h4>
@@ -140,7 +140,7 @@
               </a>
             </li>
             <li class="card-type6">
-              <a href="#" class="card">
+              <a class="card close disabled">
                 <div class="ttl-quaternary-container">
                   <h5 class="ttl-quinary">顧客の与信枠内であれば</h5>
                   <h4 class="ttl-quaternary">未回収リスクゼロ</h4>
