--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -59,30 +59,40 @@ link: "#application-flow"
 {% include 'partial/sidebar.njk' %}
 <main class="platinum_business-page">
   <section id="top" class="section-welcome fadein">
-    <div class="containers">
-      <div class="banner-containers">
-        <div class="banner-left">
-          <div class="title-notice">
-            <h3 class="title-content">
-              個人与信型ビジネスカード
-              {# {% include 'component/icons/circle-question.njk' %} #}
-            </h3>
-          </div>
-          <h1 class="ttl-primary">
-            セゾンプラチナ・ビジネス・<br> アメリカン・エキスプレス®・カード
-          </h1>
+    <div class="row">
+      <div class="left">
+        <div class="containers">
+          <div class="banner-containers">
+            <div class="banner-left">
+              <div class="title-notice">
+                <h3 class="title-content">
+                  個人与信型ビジネスカード
+                  {# {% include 'component/icons/circle-question.njk' %} #}
+                </h3>
+              </div>
+              <h1 class="ttl-primary">
+                セゾンプラチナ・ビジネス・<br> アメリカン・エキスプレス®・カード
+              </h1>
 
-          <div class="card-contents">
-            <div class="card-img">
-              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+              <div class="card-contents">
+                <div class="card-img">
+                  <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                </div>
+                <div class="card-description"><span class="yellow-bottom">初年度年会費無料</span></div>
+              </div>
+
+              <div class="banner-btn"><a class="blue_gradient_btn"
+                  href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14A6&sd=80F" target="_blank">お申し込みはこちら</a>
+              </div>
+
             </div>
-            <div class="card-description"><span class="yellow-bottom">初年度年会費無料</span></div>
+
           </div>
-
-          <div class="banner-btn"><a class="blue_gradient_btn" href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14A6&sd=80F" target="_blank">お申し込みはこちら</a></div>
-
         </div>
-        <div class="banner-right pc-only">
+      </div>
+
+      <div class="right pc-only">
+        <div class="banner-right">
           ビジネスに <br> 余裕をもたらす <br> 一枚なら。
         </div>
       </div>
@@ -144,7 +154,8 @@ link: "#application-flow"
       <h4 class="ttl-tertiary">登記簿や決算書といった業務内容や実績を示す書類の提出は不要です。<br> 書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。
       </h4>
       <div>
-        <a href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14A6&sd=80F" target="_blank" class="blue_gradient_btn">お申し込みはこちら</a>
+        <a href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14A6&sd=80F" target="_blank"
+          class="blue_gradient_btn">お申し込みはこちら</a>
       </div>
 
 
@@ -495,7 +506,7 @@ link: "#application-flow"
     {% endfor %}
   </section>
 
-   <section id="application-flow" class="section-application-flow">
+  <section id="application-flow" class="section-application-flow">
     <div class="containers">
       <div class="ttl-primary">お申し込みまでの流れ</div>
 
@@ -554,8 +565,8 @@ link: "#application-flow"
           <span class="bondi_blue_btn">
             お申し込みはこちら
             <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
-              <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
-                fill="none" stroke="#fff" stroke-width="2" />
+              <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
             </svg>
           </span>
         </a>
