--- a/app/pages/concur_expense/index.njk
+++ b/app/pages/concur_expense/index.njk
@@ -131,6 +131,7 @@ link: "#material"
             <span class="special">キャッシュフローも改善</span>
           </li>
         </ul>
+         <div class="sub-note">※画面はイメージです</div>
       </div>
     </div>
   </section>
