--- a/app/pages/purchasing_card/index.njk
+++ b/app/pages/purchasing_card/index.njk
@@ -408,7 +408,7 @@ link: "#application-flow"
               <ul>
                 <li>プラチナ会員専用デスク</li>
                 <li>AMEXセンチュリオンデザイン採用</li>
-                <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
+                <li>通常469米ドルのプライオリティ・パスを代表者様は無料でご登録可能</li>
               </ul>
               <a href="/platinum_business_pro/" class="bondi_blue_outline_btn">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
