--- a/app/pages/platinum_business_pro/index.njk
+++ b/app/pages/platinum_business_pro/index.njk
@@ -459,7 +459,7 @@ link: "#application-flow"
               <ul>
                 <li>プラチナ会員専用デスク</li>
                 <li>AMEXセンチュリオンデザイン採用</li>
-                <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
+                <li>通常469米ドルのプライオリティ・パスを代表者様は無料でご登録可能</li>
               </ul>
             </div>
           </div>
